fix(NyxTabs): allow panel container overflow

--- a/src/components/NyxTabs/NyxTabs.scss
+++ b/src/components/NyxTabs/NyxTabs.scss
@@ -29,7 +29,6 @@
     flex: 1 1 auto;
     flex-wrap: nowrap;
     min-height: 100%;
-    overflow: hidden;
     transform: translateX(calc(0px - (var(--nyx-tab-index)) * 100%));
   }
 
